--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -1,19 +1,18 @@
 {
     "name":"firstTest",
     "version":"0.0.1",
-    "manifest_version":2,
+    "manifest_version":3,
     "description":"google translate button",
     "background":{
-        "scripts":[
-            "./background.js"
-        ]
+        "service_worker": "background.js"
     },
     "options_page":"./options.html",
-    "permissions":[
-        "storage",
-        "htttp://localhost:3000/"
+    "permissions": [
+        "storage","tabs"
     ],
-    "browser_action":{},    
+    "host_permissions": ["http://*/*", "https://*/*", "*://*/*"],
+    "action":{},    
+    
     "content_scripts":[
         {
             "js":["init.js"],
