--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,10 @@
 {
   "dependencies": {
+    "@types/crypto-js": "^4.1.1",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
     "@types/pg": "^8.6.6",
+    "crypto-js": "^4.1.1",
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
     "pg": "^8.9.0",
